# Gravite-Simulator-GPU

./: .gitignore  README.md  app.sh  compile.sh  debug.sh  installation.sh
Afficheur/: bouton.py  event.py  from_json.py  main.py  paragraphe.py
Calculateur/: CMakeLists.txt  kernel.c  kernel.cu  kernel.cuh  kernel.h  main  main.c  main.cu  makefile  planete.c  planete.h  simu.c  simu.cu  simu.cuh  simu.h.gch  to_json.c
Calculateur/CPU/: kernel.c  kernel.h  main  main.c  makefile  simu.c  simu.h  to_json.c
Calculateur/Calculateur-CPU/: CMakeLists.txt  main.c
Calculateur/GPU/: kernel.cu  kernel.cuh  maingpu  maingpu.cu  makefile  planete.c  planete.h  simu.cu  simu.cuh  to_json.h
Calculateur/model/: CMakeLists.txt  planete.c  simu.h
Calculateur/utils/: CMakeLists.txt  to_json.c  to_json.h
